...
        android:layout_margin="8dp"
        android:gravity="center"
        android:padding="8dp"
        android:text="LIST VIEW"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/addButton"
        app:layout_constraintStart_toEndOf="@id/mapButton"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/addButton"
        android:layout_width="0dp"
...
